k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
