k8s/ml-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: ml-app-service
spec:
  type: LoadBalancer
  selector:
    app: ml
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
