k8s/ingress-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-api-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Rewrite for /api path
spec:
  ingressClassName: nginx
  rules:
  - host: finsights.proddeploy.xyz
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 8001
