k8s/ingress-v1-bworking.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Adjust the target as needed
spec:
  ingressClassName: nginx
  rules:
  - host: finsights.proddeploy.xyz
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 8001
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000
